# agentauth

./: .env.example  .gitignore  .golangci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  go.mod
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  funding.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
cmd/agentauth-cli/: main.go
cmd/agentauth-server/: handlers.go  main.go  services.go
db/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  rbac.yaml  service.yaml
docs/: api-reference.md  architecture.md  concepts.md  deployment.md  quickstart.md
examples/a2a-delegation/: README.md  main.go
examples/langchain-agent/: README.md  main.py
examples/mcp-server/: README.md  main.go
internal/audit/: audit_test.go  chain.go  log.go
internal/broker/: credential_broker.go  dpop.go  token_exchange.go
internal/envelope/: agentic_envelope.go  delegation.go  envelope_test.go
internal/identity/: attestation.go  issuer.go  svid.go
internal/policy/: builtin_policies.go  engine.go
internal/storage/: audit_store.go  postgres.go  redis.go  sql_adapter.go
pkg/client/: client.go
pkg/middleware/: a2a.go  mcp.go
sdk/python/: README.md  pyproject.toml
sdk/python/agentauth/: __init__.py  client.py  envelope.py  middleware.py
sdk/python/tests/: test_client.py  test_envelope.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: client.ts  envelope.ts  index.ts  middleware.ts
sdk/typescript/src/__tests__/: client.test.ts  envelope.test.ts  middleware.test.ts
test/e2e/: flow_test.go
test/integration/: identity_test.go
